# horus-checker

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  AARCH64  CairoHorus.cabal  Dockerfile  Extensions.hs  LICENSE  README.md  Version.hs  ZZm.txt  bitwise_simple_fake_inl copy.smt2  bitwise_simple_fake_inl.smt2  bitwise_simple_fake_master copy.smt2  bitwise_simple_fake_master.smt2  example.cairo  fourmolu.yaml  hh.txt  hie.yaml  horus-check.cabal  hrafn3.txt  inline_basic.txt  inline_many.txt  query_not_working.smt2  query_working.smt2  res.txt  stack.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  profile.yml
DDG/: apply_bitwise.smt2
DDGNOTFAKE/: main.smt2
app/: Main.hs
app/disasm/: Main.hs
balance_storage_var/: get_balance.smt2  get_balance<__main__.balance.read>.smt2  increase_balance.smt2  increase_balance<__main__.balance.read>.smt2  increase_balance<__main__.balance.write>.smt2  starknet.common.syscalls.storage_read.smt2  starknet.common.syscalls.storage_write.smt2
bitwise_simple_fake/: apply_bitwise.smt2  main.smt2
frobenius/: README  assertions.cairo  broken_storage_update.cairo  complex_type_storage.cairo  display.sh  missing_member.cairo  mwe.cairo  oldvat.cairo  safe_math.cairo  tail.cairo  uint256_vat.cairo  vat.cairo
hrafn/: main.smt2  starknet.common.syscalls.storage_read.smt2  starknet.common.syscalls.storage_write.smt2
mhaj/: main.smt2
scripts/: check-stylish.sh
scripts/ci/: install-compiler.sh  install-cvc5-linux.sh  install-cvc5-macos-aarch64.sh  install-cvc5-macos.sh  install-cvc5.sh  install-mathsat-linux.sh  install-mathsat-macos-aarch64.sh  install-mathsat-macos.sh  install-mathsat.sh  install-z3-from-source.sh  install-z3-linux-amd64.sh  install-z3-linux-from-source.sh  install-z3-linux.sh  install-z3-macos-aarch64.sh  install-z3.sh  test_data_extraction.py
src/: Main.hs
src/Horus/: Arguments.hs  CFGBuild.hs  CairoSemantics.hs  CallStack.hs  ContractDefinition.hs  ContractInfo.hs  Expr.hs  FunctionAnalysis.hs  Global.hs  Instruction.hs  Label.hs  Logger.hs  Module.hs  Preprocessor.hs  Program.hs  SMTHygiene.hs  SMTUtil.hs  ScopedTSExpr.hs  Util.hs  Z3Util.hs
src/Horus/CFGBuild/: Runner.hs
src/Horus/CairoSemantics/: Runner.hs
src/Horus/Command/: SMT.hs
src/Horus/Expr/: SMT.hs  Std.hs  Type.hs  Util.hs  Vars.hs
src/Horus/Expr/Type/: SMT.hs
src/Horus/Global/: Runner.hs
src/Horus/JSON/: Util.hs
src/Horus/Logger/: Runner.hs
src/Horus/Module/: Runner.hs
src/Horus/Preprocessor/: Runner.hs  Solvers.hs
src/Horus/SW/: Builtin.hs  CairoType.hs  FuncSpec.hs  Identifier.hs  IdentifierDefinition.hs  Lexer.x  Parser.y  ScopedName.hs  Std.hs  Storage.hs
src/Horus/SW/CairoType/: JSON.hs  Lexer.x  Parser.y
src/Horus/Starkware/: CairoType.hs  IdentifierDefinition.hs  Lexer.x  Parser.y  ScopedName.hs
src/SimpleSMT/: Expr.hs  NamedVariables.hs  Typed.hs
test/: Lib.hs  Main.hs  SMTSettings.hs  Wheels.hs
test-lib/: cli.py  smt_settings.py  tests.py  utils.sh
test/benchmark_src/: Main.lean  README.md  lakefile.lean
test/benchmark_src/Benchmark/: Analysis.lean  Parsers.lean  PrettyPrinters.lean  Wheels.lean
testq/: main.smt2
tests/: entrypoint.sh  profiling-entrypoint.sh
tests/resources/: bats-template  generate-bats.sh  generate-profiling-bats.sh  tests.bats
tests/resources/golden/: aa.smt2  assert_func_add_rec.cairo  assert_func_add_rec.gold  assert_func_chain.cairo  assert_func_chain.gold  assert_func_peano_prod.cairo  assert_func_peano_prod.gold  assert_inline_many.cairo  assert_inline_pre_success.cairo  assert_inline_pre_success.gold  assert_let.cairo  assert_let.gold  assert_let_minimal.cairo  assert_let_minimal.gold  assert_lvar_basic.cairo  assert_lvar_basic.gold  assert_lvar_struct.cairo  assert_lvar_struct.gold  assert_range_check_simple.cairo  assert_range_check_simple.gold  assert_simple.cairo  assert_simple.gold  assert_stack_minimal.cairo  assert_stack_minimal.gold  balance_storage_var.cairo  balance_storage_var.gold  balance_storage_var.json  balance_storage_var_namespace.cairo  bitwise_simple_fake.cairo  bitwise_simple_fake.gold  bitwise_simple_fake.json  bitwise_simple_not_fake.cairo  bitwise_simple_not_fake.gold  bitwise_simple_not_fake.json  contra.cairo  contra.gold  contra_lvars.cairo  ecdsa_simple_fake.cairo  ecdsa_simple_fake.gold  erc20_openzeppelin.cairo  (+179 more)
tests/resources/golden/toy_amm/: README  all_three_unsigned_div_rem_preconditions_16000ms.cairo  all_three_unsigned_div_rem_preconditions_6000ms.cairo  check.sh  compound_boolean_disjunction_small_upper_bound_12000ms.cairo  compound_boolean_disjunction_small_upper_bound_13000ms.cairo  display.sh  do_swap-unknown-1-optimized-manually.smt2  do_swap-unknown-1-optimized.smt2  do_swap-unknown-1-var1.smt2  do_swap-unknown-1-var10-optimized-manually.smt2  do_swap-unknown-1-var10.smt2  do_swap-unknown-1-var2-optimized-manually.smt2  do_swap-unknown-1-var2-optimized.smt2  do_swap-unknown-1-var2.smt2  do_swap-unknown-1-var3-optimized-manually.smt2  do_swap-unknown-1-var3.smt2  do_swap-unknown-1-var4-optimized-manually.smt2  do_swap-unknown-1-var4.smt2  do_swap-unknown-1-var5-optimized-manually.smt2  do_swap-unknown-1-var5.smt2  do_swap-unknown-1-var6-optimized-manually.smt2  do_swap-unknown-1-var6.smt2  do_swap-unknown-1-var7-optimized-manually.smt2  do_swap-unknown-1-var7.smt2  do_swap-unknown-1-var8-optimized-manually.smt2  do_swap-unknown-1-var8.smt2  do_swap-unknown-1-var9-optimized-manually.smt2  do_swap-unknown-1-var9.smt2  do_swap-unknown-1.smt2  do_swap-unsat-optimized-manually.smt2  do_swap-unsat-optimized.smt2  do_swap-unsat.smt2  do_swap.cairo  do_swap_UNKNOWN_4min.cairo  do_swap_check_ok.cairo  do_swap_unsound.cairo  math.cairo  minimal_simple_boolean_expressions.cairo  second_precondition_17000ms.cairo  (+11 more)
tests/resources/golden/toy_amm/do_swap_unsound_queries/: main.smt2
