cabal-version:      2.4
name:               CairoHorus
version:            0.1.0.0
category:           Language

common deps
    build-depends:           aeson
                           , base
                           , containers

    default-language:        Haskell2010
    ghc-options:             -Weverything -Werror
                             -Wno-safe -Wno-unsafe -Wno-implicit-prelude
                             -Wno-all-missed-specializations
                             -Wno-missing-deriving-strategies
                             -Wno-missing-home-modules
                             -Wno-missing-import-lists
                             -Wno-missing-safe-haskell-mode
                             -Wno-prepositive-qualified-module
                             -Wno-unused-packages

library typed-simple-smt
    import:                  deps
    hs-source-dirs:          src
    exposed-modules:         SimpleSMT.Typed
    build-depends:           simple-smt
                           , text

library
    import:                  deps
    hs-source-dirs:          src
    build-tool-depends:      alex:alex, happy:happy
    exposed-modules:         Horus.ContractDefinition
                           , Horus.Program
                           , Horus.Instruction
                           , Horus.Starkware.CairoType
                           , Horus.Starkware.IdentifierDefinition
                           , Horus.Starkware.ScopedName
                           , Horus.Starkware.Lexer
                           , Horus.Starkware.Parser
    build-depends:           mtl
                           , array
                           , simple-smt
                           , text
                           , containers
                           , typed-simple-smt

executable cairo-horus
    import:                  deps
    hs-source-dirs:          app
    main-is:                 Main.hs

    build-depends:           CairoHorus
