cabal-version:      2.4
name:               CairoHorus
version:            0.1.0.0
category:           Language

common deps
    build-depends:           aeson
                           , base

    default-language:        Haskell2010
    ghc-options:             -Weverything -Werror
                             -Wno-safe -Wno-unsafe -Wno-implicit-prelude
                             -Wno-all-missed-specializations
                             -Wno-missing-deriving-strategies
                             -Wno-missing-import-lists
                             -Wno-missing-safe-haskell-mode
                             -Wno-unused-packages

library
    import:                  deps
    hs-source-dirs:          src
    build-tool-depends:      alex:alex, happy:happy
    exposed-modules:         Horus.ContractDefinition
                           , Horus.Program
                           , Horus.Instruction
    build-depends:           mtl
                           , simple-smt
                           , text
                           , containers

executable cairo-horus
    import:                  deps
    hs-source-dirs:          app
    main-is:                 Main.hs

    build-depends:           CairoHorus
