cabal-version:      2.4
name:               horus-check
version:            0.1.0.1
category:           Language

common deps
    build-depends:           base
    default-language:        Haskell2010
    default-extensions:
      AllowAmbiguousTypes
      ConstraintKinds
      DataKinds
      DeriveFunctor
      DerivingStrategies
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      KindSignatures
      MultiParamTypeClasses
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
    ghc-options:
      -Weverything
      -Wno-safe -Wno-unsafe -Wno-implicit-prelude
      -Wno-all-missed-specializations
      -Wno-missing-deriving-strategies
      -Wno-missing-home-modules
      -Wno-missing-import-lists
      -Wno-missing-local-signatures
      -Wno-missing-safe-haskell-mode
      -Wno-unticked-promoted-constructors
      -Wno-unused-packages
    extra-libraries:
      z3

library
    import:                  deps
    hs-source-dirs:          src
    build-tool-depends:      alex:alex, happy:happy
    exposed-modules:
      Horus.Arguments
      Horus.ContractDefinition
      Horus.ContractInfo
      Horus.FunctionAnalysis
      Horus.Global
      Horus.Global.Runner
      Horus.Instruction
      Horus.Label
      Horus.Program
      Horus.SW.Std
      Horus.Util
    other-modules:
      Horus.CFGBuild
      Horus.CFGBuild.Runner
      Horus.CairoSemantics
      Horus.CairoSemantics.Runner
      Horus.Command.SMT
      Horus.CallStack
      Horus.Expr
      Horus.Expr.SMT
      Horus.Expr.Std
      Horus.Expr.Type
      Horus.Expr.Type.SMT
      Horus.Expr.Util
      Horus.Expr.Vars
      Horus.JSON.Util
      Horus.Logger
      Horus.Logger.Runner
      Horus.Module
      Horus.Module.Runner
      Horus.Preprocessor
      Horus.Preprocessor.Runner
      Horus.Preprocessor.Solvers
      Horus.SW.Builtin
      Horus.SW.CairoType
      Horus.SW.CairoType.JSON
      Horus.SW.CairoType.Lexer
      Horus.SW.CairoType.Parser
      Horus.SW.FuncSpec
      Horus.SW.Identifier
      Horus.SW.ScopedName
      Horus.SW.Storage
      Horus.Z3Util
    build-depends:
      aeson,
      array,
      constraints,
      containers,
      directory,
      co-log-core,
      dlist,
      filepath,
      free,
      hashable,
      microlens,
      microlens-ghc,
      microlens-mtl,
      mtl,
      optparse-applicative,
      pretty-simple,
      safe-exceptions,
      simple-smt,
      singletons,
      some,
      text,
      transformers,
      vinyl,
      z3,

executable horus-check
    import:                  deps
    hs-source-dirs:          app
    main-is:                 Main.hs
    build-depends:
      aeson,
      containers,
      directory,
      filepath,
      horus-check,
      microlens,
      monad-logger,
      mtl,
      optparse-applicative,
      pretty-simple,
      text,
      
